v1.0.Xx - 
Additions:
* Deal rooms can now generate variants above 100
Fixes:
* Made it so the planetarium change hud is initialized properly on save/continue
/newline/
v1.0.7c - 
Additions:
* Options.StatHUDPlanetarum
Fixes:
* Fixed a bug where sounds were duplicated if MC_POST_SFX_PLAY was in use
/newline/
v1.0.7b - 
Additions:
* Add an option to show Planetarium spawn chance in the stat HUD
* BlendMode's variables are now RGBSourceFactor, RGBDestinationFactor, AlphaSourceFactor, AlphaDestinationFactor (previous names will still work for now)
* Added BlendFactor and BlendType enums for BlendMode
Fixes:
* Fix regression caused by Godhead + Tear Detonator fix that prevented the aura from damaging enemies
* Fixed console wonkies involving input text edge detection and scaling
* Fixed Game:ShowGenericLeaderboard method to throw back to main menu even if leaderboards are no longer displayed after new run/continue
/newline/
v1.0.7a - 
Fixes:
* Fixed an issue where a change in the build process resulted in the changelog being saved in UTF-16 LE format, breaking the changelog and several other REPENTOGON menu features
/newline/
v1.0.7 -
Additions:
* Backdrops:
	- Custom Backdrop support! with contents/backdrops.xml!
	- Custom attribute reftype to specify the base backdrop for the custom ones
	- Isaac.GetBackdropIdByName (self-explanatory make sure to give your backdrops a name!)
	- MC_PRE/POST_BACKDROP_CHANGE callback accepting callbacktype as a return value on pre and recieving callbacktype as a param
* Stages:
	- Isaac.SetCurrentFloorMusic(musicid): changes the default music for the current floor(will reset after you leave the floor).
	- Isaac.SetCurrentFloorBackdrop(backdropid): changes the default backdrop for the current floor(will reset after you leave the floor).
	- Isaac.SetCurrentFloorName(string): changes the stage name for the current floor(will reset after you leave the floor).